(fix) Dark mode: Remove white block at page bottom

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -5,7 +5,7 @@
 html,
 body,
 #__next {
-  @apply h-full;
+  @apply min-h-full dark:bg-dark;
 }
 
 .markdown {
